--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>348 Tagged Open Ruby Bugs as of 2023-02-11 03:41:48 +0900</title>
+<title>348 Tagged Open Ruby Bugs as of 2023-02-11 03:46:08 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -25,18 +25,17 @@
 <input type="submit" value="fiber" />
 <input type="submit" value="mjit" />
 <input type="submit" value="autoload" />
-<input type="submit" value="doc" />
-<input type="submit" value="os-arch" />
-<input type="submit" value="backport" />
 <input type="submit" value="coverage" />
-<input type="submit" value="jit" />
+<input type="submit" value="doc" />
 <input type="submit" value="refine" />
-<input type="submit" value="unfixable" /></p>
+<input type="submit" value="backport" />
+<input type="submit" value="unfixable" />
+<input type="submit" value="yjit" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
 (<span id="matched">348</span> matched)
 <table>
-<caption>348 Tagged Open Ruby Bugs as of 2023-02-11 03:41:48 +0900</caption>
+<caption>348 Tagged Open Ruby Bugs as of 2023-02-11 03:46:08 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -157,10 +156,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/19387">Issue with ObjectSpace.each_objects not returning objects after starting a ractor</a>
 </td>
 </tr>
-<tr class=" ext os-arch ">
+<tr class=" ext os/arch ">
 <td><a href="https://bugs.ruby-lang.org/issues/19386">19386</a>
 </td>
-<td>ext os-arch</td>
+<td>ext os/arch</td>
 <td><a href="https://bugs.ruby-lang.org/issues/19386">`test_hmac.rb` of openssl is timeout on RHEL9</a>
 </td>
 </tr>
@@ -297,10 +296,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/19334">Defining many instance variables and accessing them is slow in Ruby 3.2.0</a>
 </td>
 </tr>
-<tr class=" test os-arch ">
+<tr class=" test os/arch ">
 <td><a href="https://bugs.ruby-lang.org/issues/19313">19313</a>
 </td>
-<td>test os-arch</td>
+<td>test os/arch</td>
 <td><a href="https://bugs.ruby-lang.org/issues/19313">Leaked file descriptors while running test-all</a>
 </td>
 </tr>
@@ -892,10 +891,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/18601">Invalid byte sequences in Big5 encodings</a>
 </td>
 </tr>
-<tr class=" perf core ">
+<tr class=" perf refine ">
 <td><a href="https://bugs.ruby-lang.org/issues/18572">18572</a>
 </td>
-<td>perf core</td>
+<td>perf refine</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18572">Performance regression when invoking refined methods</a>
 </td>
 </tr>
@@ -983,10 +982,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/18455">`IO#close` has poor performance and difficult to understand semantics.</a>
 </td>
 </tr>
-<tr class=" perf jit ">
+<tr class=" perf yjit ">
 <td><a href="https://bugs.ruby-lang.org/issues/18454">18454</a>
 </td>
-<td>perf jit</td>
+<td>perf yjit</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18454">YJIT slowing down key Discourse benchmarks</a>
 </td>
 </tr>
@@ -1655,10 +1654,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16810">ruby segfaults on s390x with musl libc</a>
 </td>
 </tr>
-<tr class=" core ">
+<tr class=" coverage ">
 <td><a href="https://bugs.ruby-lang.org/issues/16776">16776</a>
 </td>
-<td>core</td>
+<td>coverage</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16776">Regression in coverage library</a>
 </td>
 </tr>
